<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="walletmix.com.walletmixpayment.ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/veryLargeMargin">

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_full_name" />

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_email" />

        <EditText
            android:id="@+id/et_phone_number"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_phone_number"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_pass"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_marginTop="@dimen/xxxLargeMargin"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/button_sign_up"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_or"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/xxxLargeMargin"/>


        <Button
            android:id="@+id/sign_up_with_google_button"
            android:background="@drawable/back_one"
            android:layout_marginTop="@dimen/xxxLargeMargin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/sign_up_with_google" />

    </LinearLayout>

</ScrollView>