<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="walletmix.com.walletmixpayment.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/veryLargeMargin">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/walletmix_logo"
            tools:ignore = "contentDescription"
            android:layout_marginTop="@dimen/xxxLargeMargin"/>

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_pass"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:textColor="@color/white"
            android:text="@string/button_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_or"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/login_button_with_gmail"
            android:background="@drawable/back_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:drawableLeft="@mipmap/google_icon"
            android:drawableStart="@mipmap/google_icon"
            android:paddingLeft="@dimen/normalMargin"
            android:paddingRight="@dimen/normalMargin"
            android:text="@string/login_button_gmail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_user"/>
            <Button
                android:id="@+id/sign_up_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_up"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
